[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sevenma-sdk"
version = "0.1.0"
description = "Python SDK for 7ma auth, location and map APIs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sevenma_sdk*"]
